# USTC_CG_26

./: .gitignore
Framework2D/: .gitignore  MiniDraw_dev_log.md
Framework2D/build_clanguml/: CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
Framework2D/build_clanguml/src/: cmake_install.cmake
Framework2D/build_clanguml_j/: CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
Framework2D/build_clanguml_j/src/: cmake_install.cmake
Framework2D/include/common/: image_widget.h  window.h
Framework2D/report/report_HW1/: clang_uml.yml  report_HW1_draft.md
Framework2D/src/common/: image_widget.cpp  (+1 more)
FrameworkDDPM/: .gitignore  dataloader.py  dataset_cleaner.py  forward_noising.py  heart_4773.txt  rect_mask_tool.py  requirements-lock.txt  requirements.txt  sampling.py  training_log_analyzer.py  training_model.py  unet.py
FrameworkDDPM/datasets-icon-clean-mini/: cleaning_manifest.json
Homeworks/0_cpp_warmup/project/: CMakeLists.txt
Homeworks/0_cpp_warmup/project/src/executables/1_BasicDArray/: DArray.cpp  main.cpp
Homeworks/0_cpp_warmup/project/src/executables/2_EfficientDArray/: DArray.cpp  main.cpp
Homeworks/0_cpp_warmup/project/src/executables/3_TemplateDArray/: DArray.h  DArray.inl  main.cpp
Homeworks/0_cpp_warmup/project/src/executables/4_list_Polynomial/: main.cpp
Homeworks/0_cpp_warmup/project/src/executables/5_map_Polynomial/: TestPolynomial.h  test.cpp
Homeworks/0_cpp_warmup/project/src/libraries/shared/: PolynomialList.cpp
Homeworks/0_cpp_warmup/project/src/libraries/static/: PolynomialMap.cpp
(+56 files in other folders)
